// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset password reducer should handle RESET_EMAIL_SENT 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should handle RESET_PASSWORD_RESET 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should handle RESET_USER_PASSWORD_ERROR 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": "Reset password error",
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should handle RESET_USER_PASSWORD_REQUEST 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": true,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should handle RESET_USER_PASSWORD_SUCCESS 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": true,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should handle SEND_RESET_USER_PASSWORD_EMAIL_ERROR 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": "Send email error",
}
`;

exports[`reset password reducer should handle SEND_RESET_USER_PASSWORD_EMAIL_REQUEST 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": true,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should handle SEND_RESET_USER_PASSWORD_EMAIL_SUCCESS 1`] = `
Object {
  "isEmailSent": true,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;

exports[`reset password reducer should return the initial state 1`] = `
Object {
  "isEmailSent": false,
  "isPasswordReset": false,
  "isResettingPassword": false,
  "isSendingEmail": false,
  "resetPasswordError": null,
  "sendingEmailError": null,
}
`;
